2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ada.lang:

	Misc improvements.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/*.lang:

	Replace all uses of def:special-value style.
	Remove the compat cruft in def.lang, since it is not needed
	anymore. 

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/*.lang:

	Replace all uses of def:escape style.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/*.lang:

	Replace all uses of def:data-type with the new def:type and
	remove def:data-type from def.lang.
	Note that this is a plain search and replace it doesn't fix
	some lang file from abusing the type style.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/def.lang:

	First cut at a big reorganization of default styles. Largely
	based on work by Paolo Maggi. Defaults styles are now
	divided in groups providing sensible defaults even with
	minimalistic style schemes.

	* gtksourceview/language-specs/gvim.xml:
	* gtksourceview/language-specs/kate.xml:

	Adapted to the above (tango still to do, but it will be
	probably be revisited once the style stuff settles)

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.[ch]: add getter/setter
	for the 'hidden' property. Patch by Jesse van den Kieboom.

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: properly detect all
	predefined variables.

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/d.lang: port to the new format.

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: add a function to 
	force the highlighting of a not yet exposed region to use
	when printing.

2007-07-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang:: fix some number