@@ -29,13 +29,13 @@
   </metadata>
 
   <styles>
-    <style id="date" name="Date" map-to="def:type"/>
-    <style id="name" name="Name" map-to="def:keyword"/>
-    <style id="email" name="Email"/>
-    <style id="file" name="File" map-to="def:function"/>
-    <style id="bullet" name="Bullet" map-to="def:function"/>
+    <style id="date" name="Date" map-to="def:number"/>
+    <style id="name" name="Name" map-to="def:statement"/>
+    <style id="email" name="E-mail address" map-to="def:statement"/>
+    <style id="file" name="File" map-to="def:comment"/>
+    <style id="bullet" name="Bullet" map-to="def:type"/>
     <style id="function" name="Function" map-to="def:function"/>
-    <style id="release" name="Release" map-to="def:function"/>
+    <style id="release" name="Release" map-to="def:statement"/>
   </styles>
 
   <definitions>
