@@ -1,5 +1,13 @@
 2007-07-27  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/language-specs/changelog.lang:
+	* gtksourceview/language-specs/kate.xml:
+
+	Highlight bullet and make changelog hl in kate scheme look
+	like the original.
+
+2007-07-27  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/language-specs/ada.lang:
 
 	Misc improvements.
